# livn

./: .gitignore  README.md  conftest.py  pyproject.toml  xonfigure.py
.githooks/: pre-commit
.github/actions/install-neuron/: action.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
benchmarks/: cli.py  dataset_replay_rl.py  pyproject.toml  rl.py  scaling.py
benchmarks/interface/: project.py
docs/: index.md  package.json  ui.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: PyodideWidget.vue  index.ts
docs/examples/: dataset.md  differentiable.md  index.md  reinforcement-learning.md  simulation.md  stdp-training.md
docs/guide/: backends.md  getting-started.md  plasticity.md
docs/guide/advanced/: cleo.md  custom-backends.md  decoding-pipelines.md  distributed.md  gymnasium.md  optical-stimulation.md  plasticity.md
docs/guide/concepts/: decoding.md  encoding.md  env.md  io.md  model.md  plasticity.md  stimulus.md  system.md
docs/guide/systems/: index.md  sampling.md
docs/installation/: index.md  ncsa-deltaai.md  phdf5.md  pyodide.md  uiuc-cc.md
docs/installation/tacc/: README.md  index.md  sync_venv.sh
docs/models/: ca1.md  index.md  izhikevich.md  lif.md  rcsd.md  slif.md
docs/models/plasticity/: stdp.md
docs/systems/: datasets.md  generate.md  hsds.md  index.md  sampling.md  tuning.md
examples/: ca1_stimulus.py  differentiable_simulation.py  distributed_workers.py  parallel_simulation.py  rl.py  run_a_simulation.py  stdp_training.py  using_the_dataset.py
experiments2/: experiments.json
experiments2/ds_meta_custom/: metadata.json
experiments2/ds_meta_custom/dataset/: data-00000-of-00001.arrow  dataset_info.json  state.json
livn_experiments/: experiments.json
livn_experiments/beta/: data-00003.arrow
livn_experiments/ds_meta_default/: data-00000.arrow
livn_experiments/ds_meta_default/dataset/: data-00000-of-00001.arrow  state.json
scripts/: generate_datasets.py
src/livn/: __init__.py  cli.py  decoding.py  electrode_to_livn.py  encoding.py  io.py  policy.py  stimulus.py  system.py  types.py  utils.py  weights.py
src/livn/backend/: __init__.py  config.py  default.py
src/livn/backend/brian2/: __init__.py
src/livn/backend/diffrax/: __init__.py
src/livn/backend/neuron/: __init__.py  cells.py  mechanisms.py  synapses.py
src/livn/env/: __init__.py  distributed.py  gymnasium.py  logging.py
src/livn/integrations/: distwq.py
src/livn/models/: izhikevich.py
src/livn/models/ca1/: __init__.py
src/livn/models/ca1/neuron/mechanisms/: carsoma.mod  lin_exp2synNMDA.mod  mAHP.mod
src/livn/models/ca1/neuron/mechanisms/PinskyRinzel/: ka.mod  kd.mod  sAHP.mod
src/livn/models/ca1/neuron/mechanisms/ca1_Bilash/: caldend.mod  h_mech.mod  hhadend.mod
src/livn/models/ca1/neuron/mechanisms/ca1_Tomko/: cagk.mod  cat.mod  h.mod  kad.mod  kaprox.mod  kdrca1.mod  kmb.mod  naxn.mod
src/livn/models/ca1/neuron/templates/: IvyCell.hoc  NGFCell.hoc  PRN_neuron.py  PR_neuron.py  PyramidalCellBilash.py  SCACell.hoc
src/livn/models/rcsd/: __init__.py
src/livn/models/rcsd/diffrax/: culture.py  motoneuron.py
src/livn/models/rcsd/neuron/mechanisms/: Gfluct3.mod  Ka_v1in.mod  SpikeFilter.mod  stdp_lin_exp2syn.mod  stdp_lin_exp2synNMDA.mod  stdp_lin_exp2syn_inh.mod
src/livn/models/rcsd/neuron/templates/: BRK.py  PRN.py  V1In.py
src/livn/models/slif/: __init__.py  snn.py
systems/: cli.py  convert.py  generate.py  generate_2d.py  pyproject.toml  run.py  sample.py  tacc.py  tune.py
systems/config/: C5.yml  CA1.yml  S1.yml  S2.yml  S3.yml  S4.yml  _cell_types.yml  _definitions.yml  _params.yml  _synapses.yml  _synapses_CA1.yml
systems/config/_cell_types_C5/: CA1_CCKBC_PR.yml  CA1_IS1_PR.yml  CA1_IS2_PR.yml  CA1_IVY_PR.yml  CA1_NGFC_PR.yml
systems/config/_cell_types_CA1/: AAC_PR.yml  BS_PR.yml  IS3_PR.yml  OLM_PR.yml  PVBC_PR.yml  PYR_PR.yml  SCA_PR.yml
systems/interface/: project.py  sopt.py
systems/mechanisms/: ca1
systems/morphology/: CCKBC.swc  IS1.swc  IS3.swc  IVY.swc  NGFC.swc  SCA.swc
systems/targets/: EI.py  protocol.py
systems/templates/: AxoAxonicCell.hoc  CCKBasketCell.hoc  ISCell.hoc  gEXC.hoc  gINH.hoc
tests/: cli  test_dataset_server.py  test_decoding.py  test_env.py  test_env_distributed.py  test_examples.py  test_integrations_distwq.py  test_io.py  test_model.py  test_pipeline_cache.py  test_stdp.py  test_stimulus.py  test_system.py  test_utils.py
tests/saketh_tests/: test_arrow_decode.py  test_decoding_distributed.py
tests/systems/graphs/S1/: connectivity_matrix_35a8c056e5acea15ac2a2efff19e02ec.parquet  connectivity_matrix_7b1ffb5678b0db4661245d9042239700.parquet  graph.json  mea.json  system.parquet
ui/: README.md  pyproject.toml  server.py  web.py
ui/interface/: project.py
ui/web/: .gitignore  __init__.py  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite-plugin-pyodide.ts  vite.config.ts
ui/web/src/: app.css  app.html
ui/web/src/lib/: pyodide.ts  stores.ts  types.ts
ui/web/src/lib/components/: BioRecordingDetail.svelte  BioRecordingList.svelte  ChartModal.svelte  Console.svelte  EnvScene.svelte  ExperimentDataPanel.svelte  ExperimentList.svelte  IO.svelte  MEA_generator.svelte  NavBar.svelte  SignalViewer.svelte  SimSystemList.svelte  StatusBar.svelte  System.svelte  SystemGenerator.svelte  SystemLoader.svelte  Tooltip.svelte
ui/web/src/routes/: +page.svelte
ui/web/static/: sw.js  wheel.json
visualization/: README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
visualization/livn_visualization/: __init__.py
visualization/src/: MorphologyRenderer.jsx  NeuralVisualization.jsx  index.js
