[project]
name = "livn"
version = "0.1.0"
description = "A testbed for learning to interact with in vitro neural networks"
authors = [
    { name = "Frithjof Gressmann", email = "fg14@illinois.edu" },
    { name = "Ivan Raikov", email = "ivan.g.raikov@gmail.com" },
]
dependencies = [
    "cleosim>=0.18.1",
    "jaxtyping>=0.3.2",
    "huggingface-hub[cli]>=0.3.1",
    "pydantic>=2.11.3",
    "pandas>=2.3.1",
    "gymnasium>=1.2.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
livn = "livn.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.3", "pytest-reportlog", "ruff>=0.11.5"]
scaling = ["neuroh5 @ git+https://github.com/iraikov/neuroh5.git@b9a0897"]
# backends
neuron = [
    "miv-simulator @ git+https://github.com/GazzolaLab/MiV-Simulator.git@edfd2ef",
]
diffrax = [
    "jax>=0.8.1; platform_system == 'Darwin'",
    "jax[cuda]>=0.8.1; platform_system != 'Darwin'",
    "equinox>=0.13.2",
    "optimistix>=0.0.11",
    "jaxtyping>=0.3.4",
    "signax>=0.2.1",
    "optax>=0.2.6",
    "lineax>=0.0.8",
    "diffrax>=0.7.0",
]
brian2 = []

[tool.uv]
override-dependencies = ["jaxtyping>=0.3.2"]

[tool.uv.workspace]
members = ["systems", "benchmarks", 'visualization']

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/livn"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = []
