[project]
name = "benchmarks"
version = "0.1.0"
description = "Code to benchmark livn systems"
authors = [
    { name = "Frithjof Gressmann", email = "fg14@illinois.edu" },
    { name = "Ivan Raikov", email = "ivan.g.raikov@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["datasets==3.6.0", "spike-encoder", "systems"]

[tool.uv.sources]
systems = { workspace = true }
spike-encoder = { git = "https://github.com/iraikov/neural_spike_encoding.git" }
