[project]
name = "benchmarks"
version = "0.1.0"
description = "Code to benchmark livn systems"
authors = [
    { name = "Frithjof Gressmann", email = "fg14@illinois.edu" },
    { name = "Ivan Raikov", email = "ivan.g.raikov@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["datasets>=4.1.1", "gymnax>=0.0.9", "systems", "distrax>=0.1.7"]

[tool.uv.sources]
systems = { workspace = true }

[tool.setuptools]
py-modules = []
