[project]
name = "systems"
version = "0.1.0"
description = "Code to generate livn systems"
authors = [
    { name = "Frithjof Gressmann", email = "fg14@illinois.edu" },
    { name = "Ivan Raikov", email = "ivan.g.raikov@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "miv-simulator @ git+https://github.com/GazzolaLab/MiV-Simulator.git@f279b9c",
    "dmosopt @ git+https://github.com/iraikov/dmosopt.git@3de0ff0",
    "machinable==4.10.6",
    "sqlean-py>=3.47.0",
    "omegaconf==2.4.0.dev3",
    "livn",
    "pandas>=2.3.1",
    "keras==3.13.0",
    "huggingface-hub>=0.3.1",
]

[tool.uv.sources]
livn = { workspace = true }

[tool.setuptools]
py-modules = []
