[project]
name = "systems"
version = "0.1.0"
description = "Code to generate livn systems"
authors = [
    { name = "Frithjof Gressmann", email = "fg14@illinois.edu" },
    { name = "Ivan Raikov", email = "ivan.g.raikov@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dmosopt @ git+https://github.com/iraikov/dmosopt.git@e42d279",
    "machinable @ git+https://github.com/machinable-org/machinable.git",
    "sqlean-py>=3.47.0",
    "livn[neuron]",
    "pandas>=2.3.1",
    "keras==3.13.0",
    "huggingface-hub>=0.3.1",
]

[tool.uv.sources]
livn = { workspace = true }

[tool.setuptools]
py-modules = []
