[project]
dependencies = [
    "livn",
    "machinable @ git+https://github.com/machinable-org/machinable.git",
]
name = "ui"
version = "0.1.0"
description = "Browser-based visualization for livn"
requires-python = ">= 3.11"

[project.optional-dependencies]
server = ["hsds>=0.9", "h5pyd>=0.19", "aiohttp>=3.9"]

[tool.uv.sources]
livn = { workspace = true }

[tool.setuptools]
py-modules = []
